added reroute and subscription capabilities
